# SmartChessEngine

./: CMakeLists.txt
app/: Chess.cpp
include/: ChessBoard.cpp  ChessBoard.hpp  Piece.hpp
temp/: CMakeCache.txt  Makefile  chess  cmake_install.cmake
